src/main/default/objects/Web_Settings__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>key to be encoded</description>
    <label>key</label>
    <type>TextArea</type>
</CustomField>