src/main/default/objects/Web_Settings__c/fields/Key_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Part_2__c</fullName>
    <description>concatenate part2</description>
    <label>Key Part 2</label>
    <type>TextArea</type>
</CustomField>