src/main/default/objects/Web_Settings__c/fields/Key_Part_4__c.field-meta.xml
<CustomField>
    <fullName>Key_Part_4__c</fullName>
    <label>Key Part 4</label>
    <type>TextArea</type>
</CustomField>