src/main/default/objects/Web_Settings__c/fields/WebAddress__c.field-meta.xml
<CustomField>
    <fullName>WebAddress__c</fullName>
    <label>WebAddress</label>
    <required>true</required>
    <type>Url</type>
</CustomField>